fix stretching on mobiles

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -490,6 +490,7 @@ button[type="submit"]:hover {
 .attachment-thumbnail {
     display: block;
     margin-bottom: 2px;
+    height: auto;
 }
 
 .op-post .attachment-thumbnail {
